; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_sshbuf.c_sshbuf_set_parent.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_sshbuf.c_sshbuf_set_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sshbuf = type { i32, %struct.sshbuf* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sshbuf_set_parent(%struct.sshbuf* %0, %struct.sshbuf* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sshbuf*, align 8
  %5 = alloca %struct.sshbuf*, align 8
  %6 = alloca i32, align 4
  store %struct.sshbuf* %0, %struct.sshbuf** %4, align 8
  store %struct.sshbuf* %1, %struct.sshbuf** %5, align 8
  %7 = load %struct.sshbuf*, %struct.sshbuf** %4, align 8
  %8 = call i32 @sshbuf_check_sanity(%struct.sshbuf* %7)
  store i32 %8, i32* %6, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %14, label %10

10:                                               ; preds = %2
  %11 = load %struct.sshbuf*, %struct.sshbuf** %5, align 8
  %12 = call i32 @sshbuf_check_sanity(%struct.sshbuf* %11)
  store i32 %12, i32* %6, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %10, %2
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %3, align 4
  br label %26

16:                                               ; preds = %10
  %17 = load %struct.sshbuf*, %struct.sshbuf** %5, align 8
  %18 = load %struct.sshbuf*, %struct.sshbuf** %4, align 8
  %19 = getelementptr inbounds %struct.sshbuf, %struct.sshbuf* %18, i32 0, i32 1
  store %struct.sshbuf* %17, %struct.sshbuf** %19, align 8
  %20 = load %struct.sshbuf*, %struct.sshbuf** %4, align 8
  %21 = getelementptr inbounds %struct.sshbuf, %struct.sshbuf* %20, i32 0, i32 1
  %22 = load %struct.sshbuf*, %struct.sshbuf** %21, align 8
  %23 = getelementptr inbounds %struct.sshbuf, %struct.sshbuf* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %23, align 8
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %16, %14
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @sshbuf_check_sanity(%struct.sshbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
